--- a/.env.example
+++ b/.env.example
@@ -5,9 +5,9 @@ JWT_EXPIRATION_TIME=3600
 
 DB_HOST=localhost
 DB_USERNAME=root
-DB_PASSWORD=root123!
+DB_PASSWORD=roo123!
 DB_PORT=3306
-DB_NAME=GCV_db
+DB_NAME=GCV_DB
 
 NUVEI_SERVICE=https://ppp-test.nuvei.com/ppp/api/v1
 MERCHANT_ID=6443533374070928326
